<resources>
    <string name="app_name">OnTime</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="title_activity_contacts_list_view">ContactsListView</string>
    <string name="title_activity_status_settings">StatusSettings</string>
    <string name="title_activity_profile_picture_settings">ProfilePictureSettings</string>
    <string name="title_activity_phone_number_settings">PhoneNumberSettings</string>
    <string name="title_activity_online_presence_settings">OnlinePresenceSettings</string>
    <string name="title_activity_blocked_contacts_settings">BlockedContactsSettings</string>
    <string name="title_activity_schedule_message">ScheduleMessage</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_activity_location_services">LocationServices</string>
    <string name="title_activity_privacy_settings">PrivacySettings</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_main_page_l">MainPageL</string>
    <string name="title_activity_popup_message_dialog">PopupMessageDialog</string>
    <string name="title_activity_chat_page">ChatPage</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_settings">Settings</string>
    <string-array name="ip_addresses_array">
        <item>Static IP (197.45.183.87)</item>
        <item>Localhost IP (192.168.1.44)</item>
        <item>Custom IP</item>
    </string-array>
    <string name="server_ip_address">http://8.35.196.66:8080</string>
    <string name="server_ip_address_local">https://8.35.196.66:8443</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="opacity">Opacity</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
</resources>
